# cooplan-definitions-validator

./: .gitignore  Cargo.toml  LICENSE  README.md  attribute_id_tracker.csv  category_id_tracker.csv  config.json
.github/workflows/: integration.yml  release.yml  rust.yml
categories/: food.json
categories/food/: abcd.txt  fruit.json
categories/food/fruit/: pear.json
examples/: food.json
src/: ci.rs  config.rs  config_file_reader.rs  config_reader.rs  error.rs  main.rs  validator.rs
src/attributes/: attribute.rs  attribute_id_generator.rs  attribute_id_tracker.rs  attribute_id_tracker_file_io.rs  attribute_id_tracker_io.rs  attribute_tracker_file_io.rs  attribute_tracker_io.rs  attribute_validator.rs  attribute_validator_builder.rs  id_generator.rs  id_tracker.rs  mod.rs  source_attribute.rs
src/attributes/validations/: data_type_constant_validation.rs  data_type_validation.rs  id_tracking_validation.rs  mod.rs  reserved_attribute_names_validation.rs  validation.rs
src/categories/: category.rs  category_file_io.rs  category_file_reader.rs  category_id_generator.rs  category_id_tracker.rs  category_id_tracker_file_io.rs  category_id_tracker_io.rs  category_io.rs  category_json_deserialize.rs  category_reader.rs  category_validator.rs  id_generator.rs  id_tracker.rs  in_memory_category.rs  mod.rs  source_category.rs
src/categories/validations/: id_tracking_validation.rs  mod.rs  selectable_as_last_validation.rs  validation.rs
src/tests/: mod.rs  validator_test.rs
src/tests/attributes/: attribute_validator_test.rs  category_id_generator_test.rs  mod.rs  (+3 more)
(+11 files in other folders)
